# fxfusion

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  Makefile  README.md  requirements.txt
benchmarks/: README.md  utils.py
benchmarks/assets/keep/: cpu_mlp_balanced_16x256.csv  cpu_mlp_compute_4x4096.csv
benchmarks/assets/results/: cpu_gpt_compute_nx12_forward_static.csv  cpu_gpt_compute_nx12_static_decode.csv  cpu_gpt_dispatch_nx12_forward_static.csv  cpu_gpt_dispatch_nx12_static_decode.csv  cpu_mlp_balanced_16x256_b4.csv  cpu_mlp_compute_4x4096_b64.csv  cpu_mlp_dispatch_32x128.csv  cpu_mlp_dispatch_32x128_b1.csv  cpu_mlp_dispatch_32x64.csv  cpu_mlp_dispatch_32x64_b1.csv  cpu_resnet18.csv  cpu_resnet50.csv
benchmarks/cpu/: gpt_compute.py  gpt_dispatch.py  mlp_compute.py  mlp_dispatch.py  resnet.py  run_all.py
benchmarks/cuda/: gpt_compute.py  gpt_dispatch.py  mlp_compute.py  mlp_dispatch.py  resnet.py  run_all.py
cmake/: FindTorch.cmake
csrc/bindings/: python_bindings.cpp
csrc/include/kernels/cpu/: kernels.hpp
csrc/include/kernels/cuda/: kernels.cuh  kernels.hpp
csrc/include/runtime/: cache.hpp  execution_engine.hpp  memory_manager.hpp  op_registry.hpp  runtime_graph.hpp  runtime_node.hpp  tensor_registry.hpp
csrc/kernels/cpu/: adaptive_avg_pool2d.cpp  add.cpp  add_layer_norm.cpp  add_relu.cpp  avg_pool2d.cpp  conv2d.cpp  conv2d_relu.cpp  embedding.cpp  feedforward.cpp  layer_norm.cpp  linear.cpp  linear_relu.cpp  max_pool2d.cpp  mha.cpp  mul.cpp  narrow.cpp  relu.cpp  size.cpp  transpose.cpp  view.cpp
csrc/kernels/cuda/: adaptive_avg_pool2d.cpp  adaptive_avg_pool2d.cu  add.cpp  add.cu  add_layer_norm.cu  add_relu.cpp  add_relu.cu  avg_pool2d.cpp  avg_pool2d.cu  conv2d.cpp  conv2d.cu  conv2d_relu.cpp  conv2d_relu.cu  embedding.cu  feedforward.cu  layer_norm.cu  linear.cpp  linear.cu  linear_relu.cpp  linear_relu.cu  max_pool2d.cpp  max_pool2d.cu  mha.cu  mha_flash.cu  mha_naive.cu  mul.cu  narrow.cu  relu.cpp  relu.cu  size.cu  transpose.cu  view.cpp  view.cu
csrc/runtime/: cache.cpp  execution_engine.cpp  memory_manager.cpp  op_registry.cpp  runtime_graph.cpp  runtime_node.cpp
py/: pyproject.toml
py/examples/: resnet18.py  resnet50.py  tiny_mlp.py  utils.py
py/fxfusion/: compiler.py  engine.py  serializer.py
py/fxfusion/examples/: gpt.py  resnet50.py  tiny_mlp.py
py/fxfusion/models/transformer/: inference.py
py/fxfusion/models/transformer/blocks/: decoder_block.py  encoder_block.py  gpt_block.py
py/fxfusion/models/transformer/layers/: attention.py  embedding.py  feedforward.py  masks.py
py/fxfusion/models/transformer/models/: decoder.py  encoder.py  gpt.py  transformer.py
py/fxfusion/passes/: fusion.py  fusion_pass.py  memory_manager.py  memory_plan.py  shape_prop.py
py/fxfusion/passes/fusion/: matchers.py  ops.py  symbols.py  types.py
py/tests/: test_fusion.py  test_memory_plan.py  test_ops.py  test_ops_cpu.py  test_shape_prop.py  utils.py
python/: pyproject.toml
python/examples/: resnet18.py  tiny_mlp.py
python/fxfusion/: compiler.py
python/fxfusion/passes/: fusion.py  fusion_pass.py  memory_plan.py  shape_prop.py
schema/: graph.fbs  params_layout.md
scripts/: codegen.bash
src/: engine.cpp
